# multilayer-perceptron

./: .gitignore  default.json  first.mlp  leaf.json  model1.json  model1_trained.json  model2.json  model2_trained.json  model_perf.json  pyproject.toml  sample1h.mlp  saved.json  test.py  training.json  training_example.json  training_leaf.json  training_perf.json
alfux_mlp/: __init__.py  condensate.py  layer.py  mlp.py  mlp_graph3d.py  neuron.py  pair_plot.py  prediction.py  processor.py  regression.py  separate.py  statistics.py  teacher.py  visualizer.py
khiops/: Qualifier.py
models/: model_example.json
others/: 20250114_GPS_NRJ.pptx
scripts/: CompareOutput.py  FilterConsoElec.py  Layer.py  MLP.py  MLP3DGraph.py  MultilayerPerceptron.py  Neuron.py  PairPlot.py  Preprocessor.py  Processor.py  TGBTRegression.py  Teacher.py  Visualizer.py  best_energy_ratio.py  compare_output.py  condensate.py  describe.py  fans_regression.py  neuron.py  pair_plot.py  tgbt_regression.py  verif.py  visualize.py
src/alfux/mlp/: __init__.py  condensate.py  display.py  layer.py  mlp.py  mlp_graph3d.py  neuron.py  pair_plot.py  prediction.py  processor.py  regression.py  separate.py  statistics.py  teacher.py  visualizer.py
