[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alfux-mlp"
version = "1.0.0"
description = "Alfux's multilayer perceptron package."
authors = [{name = "Alexis Fuchs", email = "alexis.t.fuchs@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=2.2.2", "pandas>=2.3.1", "matplotlib>=3.10.0"]

[project.urls]
"Homepage" = "https://SG-DO@dev.azure.com/SG-DO/TRANSFO_DO/_git/GPS_NRJ"

[tool.setuptools]
packages = ["alfux_mlp"]
