[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "alfux-mlp"
version = "1.0.0"
description = "Alfux's multilayer perceptron package."
authors = [{name = "Alexis Fuchs", email = "alexis.t.fuchs@gmail.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=2.2.2", "pandas>=2.3.1", "matplotlib>=3.10.0"]

[project.urls]
"Homepage" = "https://github.com/alfux/multilayer-perceptron.git"

[project.scripts]
condensate = "alfux_mlp.condensate:main"
separate = "alfux_mlp.separate:main"
prediction = "alfux_mlp.prediction:main"
regression = "alfux_mlp.regression:main"
visualizer = "alfux_mlp.visualizer:main"
mlp_graph3d = "alfux_mlp.mlp_graph3d:main"

[tool.setuptools]
packages = ["alfux_mlp"]
